@@ -1,0 +1,81 @@
+<?php
+$language = array (
+  'tasks' => 'Taken',
+  'tasks:owner' => '%s\'s taken',
+  'tasks:friends' => 'Taken van vrienden',
+  'tasks:all' => 'Alle taken',
+  'tasks:add' => 'Taak toevoegen',
+  'tasks:group' => 'Groep taken',
+  'groups:enabletasks' => 'Schakel groep taken in',
+  'tasks:edit' => 'Bewerk deze taak',
+  'tasks:delete' => 'Verwijder deze taak',
+  'tasks:history' => 'Geschiedenis',
+  'tasks:view' => 'Bekijk taak',
+  'tasks:revision' => 'Revisie',
+  'tasks:navigation' => 'Navigatie',
+  'tasks:via' => 'via taken',
+  'item:object:task_top' => 'Hoofdtaken',
+  'item:object:task' => 'Taken',
+  'tasks:nogroup' => 'Deze groep heeft nog geen taken',
+  'tasks:more' => 'Meer taken',
+  'tasks:none' => 'Nog geen taken aangemaakt',
+  'river:create:object:task' => '%s heeft de taak %s aangemaakt',
+  'river:create:object:task_top' => '%s heeft de taak %s aangemaakt',
+  'river:update:object:task' => '%s heeft de taak %s bijgewerkt',
+  'river:update:object:task_top' => '%s heeft de taak %s bijgewerkt',
+  'river:comment:object:task' => '%s reageerde op de taak %s',
+  'river:comment:object:task_top' => '%s reageerde op de taak %s',
+  'tasks:title' => 'Taak titel',
+  'tasks:description' => 'Taak omschrijving',
+  'tasks:tags' => 'Tags',
+  'tasks:access_id' => 'Leesrechten',
+  'tasks:write_access_id' => 'Schrijfrechten',
+  'tasks:transfer:myself' => 'Mijzelf',
+  'tasks:noaccess' => 'Geen toegang tot de taak',
+  'tasks:cantedit' => 'Je kunt deze taak niet bewerken',
+  'tasks:saved' => 'Taak opgeslagen',
+  'tasks:notsaved' => 'De taak kon niet worden opgeslagen',
+  'tasks:error:no_title' => 'Je moet een titel voor de taak opgeven',
+  'tasks:delete:success' => 'De taak is verwijderd',
+  'tasks:delete:failure' => 'De taak kon niet worden verwijderd',
+  'tasks:strapline' => 'Laatst bijgewerkt op %s door %s',
+  'tasks:revision:subtitle' => 'Revisie aangemaakt op %s door %s',
+  'tasks:num' => 'Aantal taken om weer te geven',
+  'tasks:widget:description' => 'Dit een lijst van je taken',
+  'tasks:label:view' => 'Bekijk taak',
+  'tasks:label:edit' => 'Bewerk taak',
+  'tasks:label:history' => 'Taak geschiedenis',
+  'tasks:sidebar:this' => 'Deze taak',
+  'tasks:sidebar:children' => 'Sub taken',
+  'tasks:sidebar:parent' => 'Bovenliggende',
+  'tasks:newchild' => 'Maak een sub taal',
+  'tasks:backtoparent' => 'Terug naar \'%s\'',
+  'tasks:start_date' => 'Start',
+  'tasks:end_date' => 'Einde',
+  'tasks:percent_done' => 'klaar',
+  'tasks:work_remaining' => 'Resterend',
+  'tasks:task_type' => 'Type',
+  'tasks:status' => 'Status',
+  'tasks:assigned_to' => 'Toegewezen aan',
+  'tasks:task_type_1' => 'Analyse',
+  'tasks:task_type_2' => 'Specificaties',
+  'tasks:task_type_3' => 'Ontwikkeling',
+  'tasks:task_type_4' => 'Test',
+  'tasks:task_type_5' => 'In productie',
+  'tasks:task_status_1' => 'Geopend',
+  'tasks:task_status_2' => 'Toegewezen',
+  'tasks:task_status_3' => 'Opgedragen',
+  'tasks:task_status_4' => 'Wordt aan gewerkt',
+  'tasks:task_status_5' => 'Gesloten',
+  'tasks:task_percent_done_' => '0%',
+  'tasks:task_percent_done_0' => '0%',
+  'tasks:task_percent_done_1' => '20%',
+  'tasks:task_percent_done_2' => '40%',
+  'tasks:task_percent_done_3' => '60%',
+  'tasks:task_percent_done_4' => '80%',
+  'tasks:task_percent_done_5' => '100%',
+  'tasks:tasksboard' => 'Takenbord',
+  'tasks:tasksmanage' => 'Beheer',
+  'tasks:tasksmanageone' => 'Beheer een taak',
+);
+add_translation("nl", $language);
